--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cloudinary": "^1.33.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
     "image-downloader": "^4.3.0",
-    "mongoose": "^6.9.0"
+    "mongoose": "^6.9.0",
+    "pagination": "^0.4.6"
   }
 }
