--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.33.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
